remove bootstrap. fixup header, make static page use body scroll, not overflow scroll from position fixed. update typekit code

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -75,6 +75,7 @@ ul.buttons {
       box-shadow: none;
       color: $color-white;
       background-color: rgba($color-black, .28);
+      text-decoration: none;
       @include transition(opacity .2s ease-out);
 
       &:focus, &:hover {
